# backend_old

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
core/: settings.py
nginx/: default.conf
src/: Dockerfile  pyproject.toml  requirements.txt  start.bash
src/ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/ads/migrations/: 0001_initial.py  0002_auto_20220826_1944.py  0003_auto_20220826_1944.py  0004_alter_ad_users.py  0005_ad_address.py  0006_alter_ad_users.py
src/core/: settings.py  urls.py
src/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_auto_20220815_1244.py  0003_auto_20220815_1247.py  0004_auto_20220816_0907.py  0005_alter_schooluser_avatar.py  0006_auto_20220816_1144.py  0007_auto_20220826_1944.py  0008_auto_20220826_1944.py  0009_usernotification.py
