[tool.poetry]
name = "backend_django"
version = "1.0.0"
description = "api для приложения junior-hunt"
authors = ["Azreil-OFD <fantom2413@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10" 
django = "3.2.15"
asgiref = "3.5.2"
certifi = "2022.6.15"
cffi = "1.15.1"
charset-normalizer = "2.1.0"
coreapi = "2.3.3"
coreschema = "0.0.4"
cryptography = "37.0.4"
defusedxml = "0.7.1"
django-templated-mail = "1.1.1"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "4.8.0"
djoser = "2.1.0"
gunicorn = "20.1.0"
idna = "3.3"
itypes = "1.2.0"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
oauthlib = "3.2.0"
pillow = "9.2.0"
pycparser = "2.21"
pyjwt = "2.4.0"
python3-openid = "3.2.0"
pytz = "2022.2.1"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
six = "1.16.0"
social-auth-app-django = "4.0.0"
social-auth-core = "4.3.0"
sqlparse = "0.4.2"
uritemplate = "4.1.1"
urllib3 = "1.26.11"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
